<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCourse">

    <LinearLayout
        android:id="@+id/horoz_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/garnet"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/create_a_course_title"
            android:textColor="@color/polar_grey"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="399dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horoz_layout_top">

        <TextView
            android:id="@+id/course_name_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/course_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/course_name_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/course_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/course_id_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/course_number_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/course_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/course_number_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_entry_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/garnet"
                android:backgroundTint="@color/garnet"
                android:fontFamily="sans-serif-medium"
                android:text="@string/submit_create"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_course_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/garnet"
                android:fontFamily="sans-serif-medium"
                android:text="@string/delete_course"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>