<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/light_grey"
      android:backgroundTint="@color/light_grey"
      android:statusBarColor="@color/garnet"
      tools:context=".HomeActivity"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="27dp">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_coursecode_edits_btn"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/garnet"
        android:fontFamily="sans-serif-medium"
        android:text="Submit Code Change"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_edits_btn"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_edits_btn"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@color/garnet"
        android:fontFamily="sans-serif-medium"
        android:text="@string/submit_name_change"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:id="@+id/horoz_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/garnet"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/blanc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/blanc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blanc1" />

        <TextView
            android:id="@+id/courselist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/edit_courses"
            android:textColor="@color/polar_grey"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/blanc2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blanc1" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/previous_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horoz_layout_top">

      <EditText
          android:id="@+id/previous_course_name_field"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:ems="10"
          android:hint="@string/previous_name"
          android:inputType="textPersonName" />

      <EditText
          android:id="@+id/previous_course_code"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:ems="10"
          android:hint="@string/previous_course_code"
          android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previous_layout">

      <EditText
          android:id="@+id/new_course_name_field"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:ems="10"
          android:hint="@string/new_course_name"
          android:inputType="textPersonName" />

      <EditText
          android:id="@+id/new_course_code_field"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:ems="10"
          android:hint="New Course Code"
          android:inputType="textPersonName" />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>